Replace deprecated newInstance, pass exception to runtime exception